# cheap-browser

./: .gitignore  LICENSE  README.md  comment.js  eventloop.js  pyproject.toml  requirements-dev.txt  server.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/certs/: README.md
.github/workflows/: codeql-analysis.yml
browser/: main.py  runtime.js
typings/: skia.pyi
typings/dukpy/: __init__.pyi
typings/dukpy/sdl2/: __init__.pyi
typings/sdl2/: __init__.pyi  _internal.pyi  _sdl_init.pyi  audio.pyi  blendmode.pyi  clipboard.pyi  cpuinfo.pyi  dll.pyi  endian.pyi  error.pyi  events.pyi  filesystem.pyi  gamecontroller.pyi  gesture.pyi  guid.pyi  haptic.pyi  hidapi.pyi  hints.pyi  joystick.pyi  keyboard.pyi  keycode.pyi  loadso.pyi  locale.pyi  log.pyi  messagebox.pyi  metal.pyi  misc.pyi  mouse.pyi  pixels.pyi  platform.pyi  power.pyi  rect.pyi  render.pyi  rwops.pyi  scancode.pyi  sdlgfx.pyi  sdlimage.pyi  sdlmixer.pyi  sdlttf.pyi  sensor.pyi  (+9 more)
typings/sdl2/examples/: __init__.pyi
typings/sdl2/ext/: __init__.pyi  algorithms.pyi  array.pyi  bitmapfont.pyi  color.pyi  common.pyi  compat.pyi  displays.pyi  draw.pyi  ebs.pyi  err.pyi  events.pyi  image.pyi  input.pyi  mouse.pyi  msgbox.pyi  pixelaccess.pyi  renderer.pyi  resources.pyi  sprite.pyi  spritesystem.pyi  surface.pyi  ttf.pyi  uisystem.pyi  window.pyi
typings/sdl2/test/: __init__.pyi
www/: index.html  test.js
